Fix text wrapping

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -60,6 +60,14 @@ body.search-open {
   clear: both;
 }
 
+.content-formatted h1, .content-formatted h2, .content-formatted h3, .content-formatted h4, .content-formatted h5, .content-formatted h6, .content-formatted p, .content-formatted ul, .content-formatted ol, .header-title, .post-title, .post-title a, .comments .comment-messages {
+  word-break: break-word;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}
+
 .background-image,
 .background-color {
   top: 0;
@@ -304,13 +312,6 @@ body.search-open {
 .footer.dark-background .content-formatted, .footer.dark-background .content-formatted h1, .footer.dark-background .content-formatted h2, .footer.dark-background .content-formatted h3, .footer.dark-background .content-formatted h4, .footer.dark-background .content-formatted h5, .footer.dark-background .content-formatted h6, .footer.dark-background .content-formatted p, .footer.dark-background .content-formatted ul, .footer.dark-background .content-formatted ol, .footer.dark-background .content-formatted pre, .footer.dark-background .content-formatted code, .footer.dark-background .content-formatted table {
   color: #FFFFFF;
   color: rgba(255, 255, 255, 0.5);
-}
-.content-formatted h1, .content-formatted h2, .content-formatted h3, .content-formatted h4, .content-formatted h5, .content-formatted h6, .content-formatted p, .content-formatted ul, .content-formatted ol {
-  word-break: break-word;
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto;
 }
 .content-page:not(.blog-page) .content .content-formatted h2, .content-page:not(.blog-page) .content .content-formatted h3, .content-page:not(.blog-page) .content .content-formatted h4, .content-page:not(.blog-page) .content .content-formatted h5, .content-page:not(.blog-page) .content .content-formatted h6, .content-page:not(.blog-page) .content .content-formatted p, .content-page:not(.blog-page) .content .content-formatted ul, .content-page:not(.blog-page) .content .content-formatted ol {
   margin-left: 50px;
@@ -1180,16 +1181,10 @@ body.search-open {
   }
 }
 .header-title {
-  word-break: break-word;
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto;
   position: relative;
   top: 1px;
   display: inline-block;
   vertical-align: middle;
-  word-break: break-word;
   min-width: 140px;
   min-height: 40px;
   line-height: 1.3;
@@ -1400,14 +1395,6 @@ body.search-open {
 }
 
 /* BLOG & BLOG ARTICLE */
-.post-title, .post-title a {
-  word-break: break-word;
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto;
-}
-
 .front-page .blog-title {
   margin: 0;
   font-weight: 400;
