--- a/stylesheets/scss/_blog-and-article.scss
+++ b/stylesheets/scss/_blog-and-article.scss
@@ -1,7 +1,7 @@
 /* BLOG & BLOG ARTICLE */
 .post-title {
   &, & a {
-    @include hyphenate;
+    @extend %hyphenate;
   }
 }
 
