--- a/stylesheets/scss/_comments.scss
+++ b/stylesheets/scss/_comments.scss
@@ -35,6 +35,7 @@
   }
 
   .comment-messages {
+    @extend %hyphenate;
     margin: 24px 0;
   }
 
